package org.apache.mesos.logstash.common;

option java_package = "org.apache.mesos.logstash.common";
option java_outer_classname = "LogstashProtos";

message LogstashConfig {
  required string frameworkName = 1;
  required string config = 2;
}

message SchedulerMessage {
  enum SchedulerMessageType {
      REQUEST_STATS = 1;
      NEW_CONFIG = 2;
  }
  required SchedulerMessageType type = 1;

  // NEW_CONFIG
  repeated LogstashConfig dockerConfig = 2;
  repeated LogstashConfig hostConfig = 3;
}

message ContainerState {
  enum LoggingStateType {
    STREAMING = 1;
    NOT_STREAMING = 2;
    ERROR = 3;
  }
  required LoggingStateType type = 1;
  required string name = 2;
  optional string message = 3;
}

message ExecutorMessage {
  enum ExecutorMessageType {
      STATS = 1;
  }
  required ExecutorMessageType type = 1;
  repeated ContainerState containers = 2;
}
